# fastapi-auth

./: .gitignore  Makefile  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: auth.py  models.py
src/fastapi/: api.py
src/wristband/fastapi_auth/: __init__.py  auth.py  client.py  config_resolver.py  exception.py  exceptions.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_auth_extra.py  test_client.py  test_config_resolver.py  test_exceptions.py  test_models.py  test_session_encryptor.py  test_utils.py  utilities.py
tests/auth/: test_callback.py  test_create_callback_response.py  test_discover.py  test_login.py  test_logout.py  test_refresh_token_if_expired.py
wristband/: api.py  auth.py  csrf.py  models.py  utils.py
wristband/fastapi/: api.py  auth.py
