[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wristband-fastapi-auth"
version = "0.1.1"
description = "SDK for integrating your Python FastAPI application with Wristband. Handles user authentication and token management."
readme = "README_PYPI.md"
license = {text = "MIT"}
authors = [
    {name = "Wristband", email = "support@wristband.dev"},
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=44.0.3,<45.0.0",
    "fastapi>=0.115.12,<0.116.0",
    "httpx>=0.28.1,<0.29.0",
]
keywords = [
    "api",
    "auth",
    "authentication",
    "authorization",
    "fastapi",
    "jwt",
    "multi-tenant",
    "multi-tenancy",
    "oauth",
    "oidc",
    "sdk",
    "secure",
    "security",
    "wristband"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.10.0",
    "types-jsonschema",
    "flake8>=6.0.0,<7.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"wristband" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
